@@ -109,7 +109,12 @@ Part 1 - Implement the front end UI:
              A component to loop each news item
              A component to display the end result
              Code is a wee bit more manageable
-        ☐ A button that lets you change the size of the news items @started(18-08-28 12:47)
+        ✔ A button that lets you change the size of the news items @started(18-08-28 12:47) @done(18-08-31 17:21) @lasted(3d4h34m34s)
+            //Sort of, doesn't remember tile sizes if you leave the page.
+            ☐ Maybe some kind of randomised news tile size @started(18-08-31 17:24)
+        ☐ Some kind of delayed loading should be considered here beyond 20 items. @started(18-08-31 17:24)
+            // Currently limited to last 20 in database.
+
         News Items:
             ☐ Create Hover/Click caption @started(18-07-25 15:13)
 
@@ -198,7 +203,7 @@ Part 2 Implement Database functionality:
         ☐ BUG:: You are unable to create a new article straight away unless you refresh the page
         ☐ When you delete an article the page should auto-refresh.
         //☐ ISSUE:: The key that is now used is +1 the number of objects in the database. Not an issue I think but might cause some problems
-     ☐ Look into loading a limited number of news items on the home page. The scroll could be used to detect the scroll position and load more things from the database.
+     ✔ Look into loading a limited number of news items on the home page. The scroll could be used to detect the scroll position and load more things from the database. @done(18-08-31 17:22)
      ☐ Ability to approve posts made by unauthorized users @started(18-08-22 16:04)
      ✔ Organise Components a bit neater @done(18-08-13 18:02)
         ✔ Organise CSS into neater file @done(18-08-14 13:52)
@@ -214,13 +219,20 @@ Deployed Project To-Do:
     ☐ Add Custom Title Tag
     ☐ The split main header in the news page appears too early.
     ☐ BUG: If you refresh the page on a news article you will get a 404 error.
-    
+
+31 August 2018:
+    ✔ Keep working on recommended reading bar @done(18-08-31 17:22)
+    ✔ Add more data to database @done(18-08-31 17:22)
+    ✔ Implement custom news tile sizes @done(18-08-31 17:22)
+        //Sort of, doesn't remember tile sizes if you leave the page.
+    ☐ Deploy new build to website
+    ☐ Update portfolio changelog
 30 August 2018:
     ✔ Clean Up Console @done(18-08-30 11:47)
     ✔ Improve appearance and control of page score @done(18-08-30 12:26)
-    ☐ Improve appearance of recommended reading bar
-    ☐ Deploy new build to portfolio
-    ☐ Write blog
+    ✔ Improve appearance of recommended reading bar @done(18-08-31 17:22)
+    ✔ Deploy new build to portfolio @done(18-08-31 17:22)
+    ✔ Write blog @done(18-08-31 17:22)
 
 29 August 2018:
     ✔ Implement some sort of like and dislike functionality @done(18-08-29 17:09)
