@@ -1,10 +1,20 @@
 .recReadingWrapper{
-    border-top: 1px solid black;
+    /* border-top: 1px solid black; */
+    background-color: rgb(185, 185, 185);
+    color: black;
+    height: 20rem;
     margin:  0 auto;
+    /* max-width: 1200px; */
+}
+.recReadingWrapper h2{
+    margin: 0 auto;
     max-width: 1200px;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
 }
 .recReadingItemWrapper{
-    border-top: 1px solid black;
+    /* border-top: 1px solid black; */
+    
     display: flex;
     margin: 0 auto;
     max-width: 1200px;
@@ -16,13 +26,13 @@
         /* widows: 200px; */
     }
         .recReadingItem a{
-            color: white;
+            color: rgb(0, 0, 0);
             text-decoration:none;
         }
     
     .recReadingItem div{
-        background-color: black;
-        color: white;
+        /* background-color: rgb(255, 255, 255); */
+        /* color: rgb(0, 0, 0); */
         display: flex;
         height: 100%;
         margin: 0 auto;
